Update 'goapp-tekton' component image to: rhtap-quay-quay-rhtap-quay.apps.rhopp241121.devcluster.openshift.com/rhtap/goapp-tekton:fef7baac39d56ae2d4a8dc01b320048c81003e47@sha256:4bdcd465c2f7767703d898b2c8c29d1fb093115af667642c59754b8e12707dde

--- a/components/goapp-tekton/overlays/development/deployment-patch.yaml
+++ b/components/goapp-tekton/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: goapp-tekton
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rhopp241121.devcluster.openshift.com/rhtap/goapp-tekton:fef7baac39d56ae2d4a8dc01b320048c81003e47@sha256:4bdcd465c2f7767703d898b2c8c29d1fb093115af667642c59754b8e12707dde
+          name: container-image
